config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-engine-service
spec:
  type: NodePort
  selector:
    app: wiki-engine
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
